// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the GradientOverlayImage component should render 1`] = `
<View
  theme={
    Object {
      "alpha": Object {
        "high": 0.9,
        "low": 0.4,
        "medium": 0.7,
      },
      "breakpoints": Object {
        "lg": 1200,
        "md": 800,
        "sm": 496,
        "xs": 320,
      },
      "buttons": Object {
        "default": Object {
          "accent": "#303030",
          "fill": "#dddddd",
        },
        "primary": Object {
          "accent": "#ffffff",
          "fill": "#6bac43",
        },
        "secondary": Object {
          "accent": "#ffffff",
          "fill": "#1c683e",
        },
        "tertiary": Object {
          "accent": "#ffffff",
          "fill": "#2a4930",
        },
      },
      "colors": Object {
        "action": Object {
          "default": "#dddddd",
          "primary": "#6bac43",
          "secondary": "#1c683e",
          "tertiary": "#2a4930",
        },
        "alert": "#c64f55",
        "background": Object {
          "accent": "rgba(221, 221, 221, 0.09999999999999998)",
          "darkOverlay": "rgba(133, 133, 133, 0.6)",
          "default": "#ffffff",
          "inactive": "#dddddd",
          "overlay": "rgba(133, 133, 133, 0.09999999999999998)",
          "primary": "#6bac43",
        },
        "black": "#000000",
        "darkPrimary": "#303030",
        "darkSecondary": "#505050",
        "darkTertiary": "#858585",
        "input": Object {
          "placeholder": "#858585",
        },
        "lightPrimary": "#ffffff",
        "lightSecondary": "#f7f7f7",
        "lightTertiary": "#dddddd",
        "primary": "#6bac43",
        "secondary": "#1c683e",
        "shadows": Object {
          "default": "rgba(133, 133, 133, 0.30000000000000004)",
        },
        "tertiary": "#2a4930",
        "text": Object {
          "link": "#6bac43",
          "primary": "#303030",
          "secondary": "#505050",
          "tertiary": "#858585",
        },
        "transparent": "transparent",
        "white": "#ffffff",
      },
      "helpers": Object {
        "rem": [Function],
        "verticalRhythm": [Function],
      },
      "overrides": Object {},
      "shadows": Object {
        "default": Object {
          "android": Object {
            "elevation": 3,
          },
          "ios": Object {
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          },
          "web": Object {
            "boxShadow": "0 1px 4px rgba(133, 133, 133, 0.30000000000000004)",
          },
        },
      },
      "sizing": Object {
        "avatar": Object {
          "large": 160,
          "medium": 80,
          "small": 40,
        },
        "baseUnit": 20,
        "borderRadius": 6,
      },
      "type": "light",
      "types": Object {
        "dark": Object {
          "colors": Object {
            "action": Object {
              "default": "#858585",
              "primary": "#6bac43",
              "secondary": "#1c683e",
              "tertiary": "#2a4930",
            },
            "background": Object {
              "accent": "rgba(133, 133, 133, 0.09999999999999998)",
              "darkOverlay": "rgba(133, 133, 133, 0.6)",
              "default": "#303030",
              "inactive": "#858585",
              "overlay": "rgba(133, 133, 133, 0.09999999999999998)",
              "primary": "#6bac43",
            },
            "input": Object {
              "placeholder": "#dddddd",
            },
            "shadows": Object {
              "default": "rgba(133, 133, 133, 0.30000000000000004)",
            },
            "text": Object {
              "link": "#6bac43",
              "primary": "#ffffff",
              "secondary": "#f7f7f7",
              "tertiary": "#dddddd",
            },
          },
        },
        "light": Object {
          "colors": Object {
            "action": Object {
              "default": "#dddddd",
              "primary": "#6bac43",
              "secondary": "#1c683e",
              "tertiary": "#2a4930",
            },
            "background": Object {
              "accent": "rgba(221, 221, 221, 0.09999999999999998)",
              "darkOverlay": "rgba(133, 133, 133, 0.6)",
              "default": "#ffffff",
              "inactive": "#dddddd",
              "overlay": "rgba(133, 133, 133, 0.09999999999999998)",
              "primary": "#6bac43",
            },
            "input": Object {
              "placeholder": "#858585",
            },
            "shadows": Object {
              "default": "rgba(133, 133, 133, 0.30000000000000004)",
            },
            "text": Object {
              "link": "#6bac43",
              "primary": "#303030",
              "secondary": "#505050",
              "tertiary": "#858585",
            },
          },
        },
      },
      "typography": Object {
        "baseFontSize": 18,
        "baseLineHeight": 20,
        "fontFamilySans": null,
        "fontFamilySerif": "Georgia",
      },
    }
  }
>
  <Image
    maintainAspectRatio={false}
    source={
      Array [
        Object {
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Array [
        Object {},
        Object {
          "aspectRatio": 1,
          "resizeMode": "cover",
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`the GradientOverlayImage component should render with an overlayColor 1`] = `
<View
  theme={
    Object {
      "alpha": Object {
        "high": 0.9,
        "low": 0.4,
        "medium": 0.7,
      },
      "breakpoints": Object {
        "lg": 1200,
        "md": 800,
        "sm": 496,
        "xs": 320,
      },
      "buttons": Object {
        "default": Object {
          "accent": "#303030",
          "fill": "#dddddd",
        },
        "primary": Object {
          "accent": "#ffffff",
          "fill": "#6bac43",
        },
        "secondary": Object {
          "accent": "#ffffff",
          "fill": "#1c683e",
        },
        "tertiary": Object {
          "accent": "#ffffff",
          "fill": "#2a4930",
        },
      },
      "colors": Object {
        "action": Object {
          "default": "#dddddd",
          "primary": "#6bac43",
          "secondary": "#1c683e",
          "tertiary": "#2a4930",
        },
        "alert": "#c64f55",
        "background": Object {
          "accent": "rgba(221, 221, 221, 0.09999999999999998)",
          "darkOverlay": "rgba(133, 133, 133, 0.6)",
          "default": "#ffffff",
          "inactive": "#dddddd",
          "overlay": "rgba(133, 133, 133, 0.09999999999999998)",
          "primary": "#6bac43",
        },
        "black": "#000000",
        "darkPrimary": "#303030",
        "darkSecondary": "#505050",
        "darkTertiary": "#858585",
        "input": Object {
          "placeholder": "#858585",
        },
        "lightPrimary": "#ffffff",
        "lightSecondary": "#f7f7f7",
        "lightTertiary": "#dddddd",
        "primary": "#6bac43",
        "secondary": "#1c683e",
        "shadows": Object {
          "default": "rgba(133, 133, 133, 0.30000000000000004)",
        },
        "tertiary": "#2a4930",
        "text": Object {
          "link": "#6bac43",
          "primary": "#303030",
          "secondary": "#505050",
          "tertiary": "#858585",
        },
        "transparent": "transparent",
        "white": "#ffffff",
      },
      "helpers": Object {
        "rem": [Function],
        "verticalRhythm": [Function],
      },
      "overrides": Object {},
      "shadows": Object {
        "default": Object {
          "android": Object {
            "elevation": 3,
          },
          "ios": Object {
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          },
          "web": Object {
            "boxShadow": "0 1px 4px rgba(133, 133, 133, 0.30000000000000004)",
          },
        },
      },
      "sizing": Object {
        "avatar": Object {
          "large": 160,
          "medium": 80,
          "small": 40,
        },
        "baseUnit": 20,
        "borderRadius": 6,
      },
      "type": "light",
      "types": Object {
        "dark": Object {
          "colors": Object {
            "action": Object {
              "default": "#858585",
              "primary": "#6bac43",
              "secondary": "#1c683e",
              "tertiary": "#2a4930",
            },
            "background": Object {
              "accent": "rgba(133, 133, 133, 0.09999999999999998)",
              "darkOverlay": "rgba(133, 133, 133, 0.6)",
              "default": "#303030",
              "inactive": "#858585",
              "overlay": "rgba(133, 133, 133, 0.09999999999999998)",
              "primary": "#6bac43",
            },
            "input": Object {
              "placeholder": "#dddddd",
            },
            "shadows": Object {
              "default": "rgba(133, 133, 133, 0.30000000000000004)",
            },
            "text": Object {
              "link": "#6bac43",
              "primary": "#ffffff",
              "secondary": "#f7f7f7",
              "tertiary": "#dddddd",
            },
          },
        },
        "light": Object {
          "colors": Object {
            "action": Object {
              "default": "#dddddd",
              "primary": "#6bac43",
              "secondary": "#1c683e",
              "tertiary": "#2a4930",
            },
            "background": Object {
              "accent": "rgba(221, 221, 221, 0.09999999999999998)",
              "darkOverlay": "rgba(133, 133, 133, 0.6)",
              "default": "#ffffff",
              "inactive": "#dddddd",
              "overlay": "rgba(133, 133, 133, 0.09999999999999998)",
              "primary": "#6bac43",
            },
            "input": Object {
              "placeholder": "#858585",
            },
            "shadows": Object {
              "default": "rgba(133, 133, 133, 0.30000000000000004)",
            },
            "text": Object {
              "link": "#6bac43",
              "primary": "#303030",
              "secondary": "#505050",
              "tertiary": "#858585",
            },
          },
        },
      },
      "typography": Object {
        "baseFontSize": 18,
        "baseLineHeight": 20,
        "fontFamilySans": null,
        "fontFamilySerif": "Georgia",
      },
    }
  }
>
  <Image
    maintainAspectRatio={false}
    source={
      Array [
        Object {
          "height": 400,
          "uri": "https://picsum.photos/600/400/?random",
          "width": 600,
        },
      ]
    }
    style={
      Array [
        Object {},
        Object {
          "aspectRatio": 1,
          "resizeMode": "cover",
          "width": "100%",
        },
      ]
    }
  />
  <ExponentLinearGradient
    colors={
      Array [
        16416882,
        4294606962,
      ]
    }
    endPoint={
      Array [
        0,
        1,
      ]
    }
    locations={
      Array [
        0.3,
        1,
      ]
    }
    startPoint={
      Array [
        0,
        0,
      ]
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
